[workspace]
members = ["tempest-core", "tempest-macro", "axum-htmx-test"]
default-members = ["axum-htmx-test"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "tempest"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempest-core.path = "tempest-core"
tempest-macro.path = "tempest-macro"
